k8s-argocd/service-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: archon-frontend-service
  labels:
    app.kubernetes.io/component: frontend
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 3737
      protocol: TCP
      targetPort: http
  selector:
    app.kubernetes.io/component: frontend
