k8s-argocd/service-server.yaml
apiVersion: v1
kind: Service
metadata:
  name: archon-server-service
  labels:
    app.kubernetes.io/component: server
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8181
      protocol: TCP
      targetPort: http
  selector:
    app.kubernetes.io/component: server
